<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddStoryActivity">

    <ImageView
        android:id="@+id/ivStory"
        android:layout_width="366dp"
        android:layout_height="258dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/upload"
        android:contentDescription="@string/uploaded_photo" />

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="60dp"
        android:text="@string/camera"
        app:layout_constraintStart_toStartOf="@+id/ivStory"
        app:layout_constraintTop_toBottomOf="@+id/ivStory" />

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="36dp"
        android:text="@string/gallery"
        app:layout_constraintEnd_toEndOf="@+id/ivStory"
        app:layout_constraintTop_toBottomOf="@+id/ivStory" />

    <EditText
        android:id="@+id/tv_des"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="Description"
        android:background="@drawable/description_border"
        android:gravity="top|left"
        android:hint="@string/add_your_story"
        android:inputType="textMultiLine"
        android:maxHeight="180dp"
        android:maxLines="8"
        android:padding="15dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivStory"
        tools:ignore="RtlHardcoded" />


    <Button
        android:id="@+id/btnUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:text="@string/upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_des" />

    <Button
        android:id="@+id/btnSelectLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="Choose your location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_des" />
</androidx.constraintlayout.widget.ConstraintLayout>